Web Inspector: [Network] Columns are misaligned as first row goes out of sight. https://bugs.webkit.org/show_bug.cgi?id=107933
Patch by Eugene Klyuchnikov <eustas@chromium.org> on 2013-01-31
Reviewed by Pavel Feldman.

For some reason if "td" elements in first table row have "display: none"
style, then column width calculation breaks.

* inspector/front-end/networkLogView.css:
(.network-log-grid.data-grid tr.offscreen > td > div):
Hide content instead of "td" element itself.

Canonical link: https://commits.webkit.org/126678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141406 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/networkLogView.css
+++ b/Source/WebCore/inspector/front-end/networkLogView.css
@@ -69,7 +69,7 @@
     height: 41px;
 }
 
-.network-log-grid.data-grid tr.offscreen td {
+.network-log-grid.data-grid tr.offscreen > td > div {
     display: none;
 }
 
